<resources>
    <string name="app_name">SuryaRating</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="button_next"><u>Next</u></string>

    <string name="checkbox_vaccinations">Vaccinations</string>
    <string name="checkbox_pathology">Pathology</string>
    <string name="checkbox_radiology">Radiology</string>
    <string name="checkbox_cardiology">Cardiology</string>
    <string name="checkbox_neurology">Neurology</string>
    <string name="string_feedback_form">Feedback Form</string>
    <string name="string_feedback_valued">We sincerely value your view.</string>

    <string name="textview_patient_name">Patient Name:</string>
    <string name="textview_consulting_doctor">Consulting Doctor:</string>
    <string name="textview_speciality">Speciality:</string>
    <string name="textview_UHID">UHID:</string>
    <string name="textview_date_of_visit">Date of Visit:</string>
    <string name="textview_contact_no">Contact Number:</string>
    <string name="textview_email">Email:</string>
    <string name="textview_signature">Signature:</string>

    <string name="textview_instructions_1">On a scale of 1 to 5, where 1 is dissatisfied and 5 is extremely satisfied, how do you rate the following at Surya Hospitals:</string>
    <string name="textview_location_of_hospital">Location of the Hospital</string>
    <string name="textview_ease_of_booking">Cleanliness at the Hospital</string>
    <string name="textview_transparent_communication">Transparent Communication from Hospital</string>
    <string name="textview_waiting_time">Waiting Time at Hospital</string>
    <string name="textview_care_provided_by_doctor">Care provided by doctor</string>
    <string name="textview_care_provided_by_nursing_staff">Care provided by nursing staff</string>
    <string name="textview_hospital_infrastructure">Hospital Infrastructure</string>
    <string name="textview_billing_process">Billing Process</string>
    <string name="textview_value_for_money">Value for Money</string>
    <string name="textview_cleanliness_of_hospital">Cleanliness of Hospital</string>

    <string name="textview_recommend_question">On a scale of 1 to 5, where 1 is least likely and 5 is extremely likely,how likely are you to recommend Surya Hospitals to a famlily member or a friend?</string>
    <string name="textview_reason_question">Please specify the reason for your rating.</string>

    <string name="textview_services_question">Did you avail any of the following services at Surya Hospitals?</string>
    <string name="textview_how_long">How long have you been visiting Surya Hospitals?</string>
    <string name="textview_how_visits">In the last 12 months how many times did you visit Surya Hospital?</string>
    <string name="textview_others">Others:</string>
    <string name="textview_doctors_ref">Doctors ref.:</string>
    <string name="textview_word_of_mouth">Word of mouth:</string>
    <string name="textview_how_long_visiting">How long have you been visiting Surya Hospitals?</string>
    <string name="textview_first_visit">First Visit:</string>
    <string name="textview_less_than_6">Less than 6 months</string>
    <string name="textview_6_months">6 months to one year</string>
    <string name="textview_1_year">1-3 years</string>
    <string name="textview_3_year">More than 3 years</string>
    <string name="edittext_signature">Enter full name</string>
    <string name="textview_hear">How did you hear about us?</string>
    <string name="button_opd"><u>OPD</u></string>
    <string name="button_ipd"><u>IPD</u></string>
    <string name="button_fill_another"><u>Fill Another Form</u></string>
    <string name="title_activity_personal_details_page">Personal Details (1/7)</string>
    <string name="title_activity_field_ratings">Detailed Ratings (2/7)</string>
    <string name="title_activity_recommend_rating">Overall Recommendation Rating (3/7)</string>
    <string name="title_activity_services_page">Services Availed (4/7)</string>
    <string name="title_activity_how_long_page">Length of Assosciation (5/7)</string>
    <string name="title_activity_visits_page">Frequency of Visits (6/7)</string>
    <string name="title_activity_hear_of_us_page">How did you hear of us? (7/7)</string>
    <string name="title_activity_thank_you">Thank You</string>
    <string name="title_activity_opd_how_long_visited">opd_how_long_visited</string>

</resources>
